chore: added scroll behaviour and Links in cntact

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.45.4",
+        "firebase": "^10.14.0",
         "lucide-react": "^0.446.0",
         "next": "14.2.13",
         "react": "^18",
