--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "dependencies": {
         "@supabase/supabase-js": "^2.45.4",
         "firebase": "^10.14.0",
+        "framer-motion": "^11.11.11",
         "lucide-react": "^0.446.0",
         "next": "14.2.13",
         "react": "^18",
+        "react-animated-css": "^1.2.1",
         "react-dom": "^18",
         "swiper": "^11.1.14"
     },
